kube/configs/dc3/api-gw/gateway-consul_apigw.yaml
# This defines the actual Gateway that handles traffic, as permitted by the GatewayClass.
# After the Gateway and its listeners are defined, Routes can be assigned to define which Consul services get what traffic.
# Kube Docs: https://gateway-api.sigs.k8s.io/api-types/gateway/

apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: consul-api-gateway
  namespace: consul
spec:
  gatewayClassName: consul
  listeners:
  - name: consul-apig-http-listener
    protocol: HTTP
    port: 1666
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:                # Choose which namespaces are allowed to use this Gateway
        from: Selector
        selector:
          matchLabels:           # This label is added automatically as of K8s 1.22 to all namespaces
            kubernetes.io/metadata.name: unicorn
    # tls:
    #   certificateRefs:
    #     - name: cert-one
  - name: consul-apig-tcp-listener
    protocol: TCP
    port: 1667
    allowedRoutes:
      kinds:
      - kind: TCPRoute
      namespaces:
        from: Selector
        selector:
          matchLabels:
            kubernetes.io/metadata.name: unicorn
