kube/configs/dc3/api-gw/tcproute-externalz_tcp_ingress.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: externalz-tcp-ingress
  namespace: externalz
spec:
  parentRefs:                 # Defines the gateway listener.
  - name: consul-api-gateway
    namespace: consul
    sectionName: consul-apig-tcp-listener
  rules:
  - backendRefs:                # Defines the backend service.
    - kind: Service             # Kubernetes Service.
      name: externalz-tcp       # Kubernetes Service name that points to the Consul Mesh service.
