kube/configs/dc3/api-gw/tcproute-unicorn_ssg_frontend.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
# HTTPRoute routes HTTP requests to backend services.
kind: HTTPRoute
metadata:
  name: unicorn-ingress
  namespace: unicorn
spec:
  hostnames:
    - unicorn-frontend        # Hopefully this works to match the Host header.
  parentRefs:                 # Defines the gateway listener.
  - name: consul-api-gateway
  # Rules define behaviors for network traffic that goes through the route.
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:                # Defines the backend service.
    - kind: Service             # Consul service name or kube service name? They're probably the same anyway...
      name: unicorn-frontend
      port: 8000                # Service port or target port? hrm. We'll start with service port. If it breaks, try 10000 the target container port.
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: ReferenceGrant
metadata:
  name: grants
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: default
  to:
  - group: ""
    kind: Service
